--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "description": "beautifull landing page",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "webpack --mode production",
+        "dev": "webpack serve",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "author": "George",
     "license": "ISC",
     "devDependencies": {
-        "webpack": "^5.75.0",
+        "webpack": "^5.53.0",
         "@babel/core": "^7.15.5",
         "@babel/preset-env": "^7.15.6",
         "autoprefixer": "^10.3.5",
